[package]
edition = "2024"
name = "netflix_prize"
version = "1.0.0"

[dependencies]
byteorder = "1.5.0"
indicatif = {version="0.18.3", features=["rayon"]}
nalgebra = "0.34.1"
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
parking_lot = "0.12.5"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"

[dev-dependencies]
ctor = "0.2"

[profile.release]
lto = "fat"
codegen-units = 1
